--- a/assets/src/app/intro/index.tpl.html
+++ b/assets/src/app/intro/index.tpl.html
@@ -349,8 +349,7 @@ video {
 
 </style>
 
-<!--Multidimensional Financial Partners-->
-<div class="intro" style="max-height:500px">
+<div class="intro" style="">
 
     <div class="intro-container">
 
