--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -115,16 +115,16 @@
 	<div ng-include="'intro/index.tpl.html'"></div>
 	<div class="container" id="about">
 
-		<div class="spacing-50"></div>
+		<div class="spacing-100"></div>
 		<div class="row">
 			<div class="col-sm-12">
 			    <div style="text-align:left;" id="header-text-area">
 			       <h2>Empowered Financial Representation</h2>
-			       <h3 style="">Backed by Sound, Open Data</h3>
+			       <p style="color:gray;font-style:italic">Backed by Sound, Open Data</p>
 			    </div>
 			</div>
 		</div>
-		<div class="spacing-50"></div>
+		<div class="spacing-100"></div>
 
 	</div>
 
@@ -133,42 +133,61 @@
 		<div class="row">
 			<div class="col-sm-6">
 
-				<h3>CRE8.CAPITAL is <a>continually learning and growing</a>.</h3>
-				<!--<h3>Financial Intellligence Continually Learning & Growing</h3>-->
-				<!--<p>Guided by our Community of Analysts; Select Your Representation</p>-->
-				<p>Our Community of analysts work together to support another.</p>
+				<h3>We <a href="#">continually learn and grow</a>.</h3>
+				<p style="color:gray;font-style:italic">Our Community of analysts work together to support another.</p>
+				<div class="spacing-5"></div>
 
 				<h3>Open & Shared Intelligence</h3>
-				<p>Data we use, data we prouduce, together.</p>
+				<p style="color:gray;font-style:italic">Data we use, data we prouduce, together.</p>
+				<div class="spacing-5"></div>
 
 				<h3>Transparent Results</h3>
-				<p>Backed with strict data.</p>
+				<p style="color:gray;font-style:italic">Always backed by data.</p>
+				<div class="spacing-5"></div>
 
 			</div>
 			<div class="col-sm-6" style="text-align:right">
-				<img style="max-height:300px;" src="images/1.gif">
+				<div class="block">
+                    <div class="shape">
+                        <div class="cube outer">
+                            <div class="side left"></div>
+                            <div class="side right"></div>
+                            <div class="side top"></div>
+                            <div class="side bottom"></div>
+                            <div class="side front"></div>
+                            <div class="side back"></div>
+                            <div class="cube">
+                                <div class="side left"></div>
+                                <div class="side right"></div>
+                                <div class="side top"></div>
+                                <div class="side bottom"></div>
+                                <div class="side front"></div>
+                                <div class="side back"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 			</div>
 		</div>
 
-		<div class="spacing-50"></div>
+		<div class="spacing-100"></div>
 
 		<div class="row">
 			<div class="col-sm-4">
-				<img src="images/tesseract-bg.png">
+				<!--<img src="images/tesseract-bg.png">-->
+				<img style="max-height:300px;" src="images/1.gif">
 			</div>
 
-			<div class="col-sm-8" style="text-align:right">
+			<div class="col-sm-8" style="">
 
 				<h3>Collaboration and Contribution</h3>
-				<p>The CRE8.CAPITAL engine is continually learning from intelligence produced from your computational contrubition and analytic insight.</p>
-				<p>Deep Learning Techniques create actionable intelligence.</p>
+				<p style="color:gray;font-style:italic">We continually learn from intelligence produced from your computational contrubition and analytic insight.</p>
+				<p style="color:gray;font-style:italic">Deep Learning Techniques create actionable intelligence.</p>
+				<div class="spacing-10"></div>
 
-				<h3>Cutting Edge Analysis at Scale</h3>
-				<p>Peer to Peer Distributed Networks work to give you the cutting edge.</p>
-				<p>Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns</p>
-
-				<h3>Tensor Algebra & Details</h3>
-				<p>Take a look into how it all works.</p>
+				<h3>Decrentralized Analysis at Scale</h3>
+				<p style="color:gray;font-style:italic">Peer to Peer Distributed Networks performing computation together.</p>
+				<p style="color:gray;font-style:italic">Creating Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns</p>
 
 				<div class="spacing-10"></div>
 				<a href="/about" class="btn btn-default log-btn">Learn More</a>
@@ -177,11 +196,11 @@
 
 		</div>
 
-		<div class="spacing-50"></div>
+		<div class="spacing-100"></div>
 
 	</div>
 
-	<div style="text-align:left;color:gray;background-color:black;">
+	<div ng-show="false" style="text-align:left;color:gray;background-color:black;">
 		<div class="spacing-50"></div>
 
 		<div class="container">
