--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -1,41 +1,3 @@
-<!--<img src="images/3.jpg">
-<img src="images/4.jpg">
-<img src="images/5.jpg">
-<img src="images/6.jpg">
-<img src="images/7.jpg">
-<img src="images/8.jpg">
-<img src="images/9.jpg">
-<img src="images/10.jpg">
-<img src="images/11.jpg">
-<img src="images/12.jpg">
-<img src="images/13.jpg">
-<img src="images/14.jpg">
-<img src="images/15.jpg">
-<img src="images/16.jpg">
-<img src="images/17.jpg">
-<img src="images/18.jpg">
-<img src="images/19.jpg">
-<img src="images/20.jpg">
-<img src="images/21.jpg">
-<img src="images/22.jpg">
-<img src="images/23.jpg">
-<img src="images/24.jpg">
-<img src="images/25.jpg">
-<img src="images/26.jpg">
-<img src="images/27.jpg">
-<img src="images/28.jpg">
-<img src="images/29.jpg">
-<img src="images/30.jpg">
-<img src="images/31.jpg">
-<img src="images/32.jpg">
-<img src="images/33.jpg">
-<img src="images/34.jpg">
-<img src="images/35.jpg">-->
-
-<!--<img src="images/2.gif">
-<img src="images/3.gif">
-<img src="images/4.gif">
-<img src="images/5.gif">-->
 <div style="height:20vh;overflow:hidden">
     <!--<h1 style="color:white;position:absolute">create the next wave</h1>-->
     <img src="images/24.jpg" style="width:100%">
@@ -63,12 +25,9 @@
     <div class="container" style="text-align:left">
         <div class="row">
             <div class="col-sm-6">
-                <!--<h3><i class="fa fa-file-o"></i> Open Data</h3>
-                <p style="font-style:italic">Data, we use. Data we produce, together.</p>-->
                 <h3>Cutting Edge Analysis at Scale</h4>
                 <h3>Open Intelligence</h3>
-                                <h3>Collaboration and Contribution</h3>
-
+                <h3>Collaboration and Contribution</h3>
             </div>
             <div class="col-sm-6" style="overflow:hidden; text-align:right">
                 <img style="height:200px"src="images/2.gif">
@@ -80,63 +39,57 @@
 
 <div class="container" style="text-align:left">
 
-    <!--<img src="images/24.jpg" style="max-width:100%">-->
-    <!--<img src="images/25.jpg" style="max-width:100%">
-    <img src="images/26.jpg" style="max-width:100%">
-    <img src="images/13.jpg" style="max-width:100%">
-    <img src="images/30.jpg" style="max-width:100%">
-    <img src="images/34.jpg" style="width:100%">-->
-
-
     <div class="spacing-50"></div>
 
     <div class="row">
+
         <div class="col-sm-6">
-            <h3>Open Intelligence</h3>
+            <h3>Market Information & Analysis</h3>
             <h5>Community Analysts</h5>
-            <img style="max-height:300px" src="images/heatmap.png">
         </div>
 
         <div class="col-sm-6">
-            <highchart config="bidAskChart"></highchart>
         </div>
+
     </div>
     
     <div class="spacing-50"></div>
 
     <div class="row">
+
         <div class="col-sm-6">
             <h3>Transparent Finance </h3>
             <p style="font-style:italic">We Create Valuable Intelligence</p>
         </div>
 
         <div class="col-sm-6">
-            <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
+
     </div>
 
     <div class="spacing-50"></div>
 
     <div class="row">
-        <!--<div class="col-sm-6">
+
+        <div class="col-sm-6">
             <h3>Mapping the Market</h3>
-            <highchart config="bidAskChart"></highchart>
-        </div>-->
+        </div>
 
         <div class="col-sm-12">
-            <highchart config="heatMapChart"></highchart>
         </div>
+
     </div>
 
     <div class="row">
+
         <div class="col-sm-6">
             <h3>Performance | Analysis </h3>
             <p style="font-style:italic">How are we doing?</p>
         </div>
 
         <div class="col-sm-6">
-            <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
+
     </div>
 
     <div class="spacing-50"></div>
