--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -156,40 +156,15 @@
     <div class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
 
-            <div class="navbar-header">
-                <button class="navbar-toggle" type="button" ng-click="navToggle()">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/"><img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:10px">CRE8.CAPITAL</a>
-            </div>
+            <button class="navIcon" type="button" ng-click="navToggle()">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><img src="images/tesseract.png" style="height:32px;float:left;margin-top:-3px;margin-right:10px">CRE8.CAPITAL</a>
 
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li ng-class="{ active: isActive('/about')}" ng-show="!currentUser"><a href="/about">ABOUT</a></li>
-                    <li ng-class="{ active: isActive('/markets')}"><a href="/markets">EXPLORE</a></li>
-                    <form class="navbar-form pull-left" role="search" action="/search/" onSubmit=" location.href = 'search/' + document.getElementById('search-link').value; return false;">
-                        <div class="form-group">
-                            <input ng-keyup="keyPress(searchValue)" ng-model="searchValue" id="search-link" size="40" type="text" placeholder="">
-                        </div>
-                    </form>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li ng-class="{ active: isActive('/register')}" ng-show="!currentUser"><a href="/register">REGISTER</a></li>
-                    <li ng-click="loginToggle()" ng-class="{ active: isActive('/login')}" ng-show="!currentUser"><a>LOGIN</a></li>
-                    <li ng-click="navToggle()">
-                        <button class="navIcon" type="button" style="margin-top:4px;">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </li>
-                </ul>
-            </div>
-            
+
         </div>
     </div>
 
