--- a/.tmp/public/src/app/about/index.tpl.html
+++ b/.tmp/public/src/app/about/index.tpl.html
@@ -1,52 +1,32 @@
-<!--<img src="images/3.jpg">
-<img src="images/4.jpg">
-<img src="images/5.jpg">
-<img src="images/6.jpg">
-<img src="images/7.jpg">
-<img src="images/8.jpg">
-<img src="images/9.jpg">
-<img src="images/10.jpg">
-<img src="images/11.jpg">
-<img src="images/12.jpg">
-<img src="images/13.jpg">
-<img src="images/14.jpg">
-<img src="images/15.jpg">
-<img src="images/16.jpg">
-<img src="images/17.jpg">
-<img src="images/18.jpg">
-<img src="images/19.jpg">
-<img src="images/20.jpg">
-<img src="images/21.jpg">
-<img src="images/22.jpg">
-<img src="images/23.jpg">
-<img src="images/24.jpg">
-<img src="images/25.jpg">
-<img src="images/26.jpg">
-<img src="images/27.jpg">
-<img src="images/28.jpg">
-<img src="images/29.jpg">
-<img src="images/30.jpg">
-<img src="images/31.jpg">
-<img src="images/32.jpg">
-<img src="images/33.jpg">
-<img src="images/34.jpg">
-<img src="images/35.jpg">-->
-
-<!--<img src="images/2.gif">
-<img src="images/3.gif">
-<img src="images/4.gif">
-<img src="images/5.gif">-->
-<div style="height:20vh;overflow:hidden">
-    <!--<h1 style="color:white;position:absolute">create the next wave</h1>-->
-    <img src="images/24.jpg" style="width:100%">
+<div class="intro" style="">
+    <div class="intro-container">
+        <svg class="svg-defs" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
+            <symbol id="intro-desktop-text">
+                <text style="font-size:108px;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
+                <text style="font-size:28px;" text-anchor="middle" x="960" y="570" dy=".35em" class="medium-text">ABOUT</text> 
+            </symbol>  
+            <div class="intro-shade"></div>  
+        </svg> 
+        <div class="box-with-text">
+            <div class="text-fill">
+                <video itemscope itemtype="VideoObject" class="video" src="https://www.cre8.xyz/videos/galaxys.mp4" preload="auto"autoplay="autoplay" loop="loop" muted="muted"></video>
+            </div>
+            <svg class="svg-inverted-mask" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
+                <rect width="100%" height="100%" mask="url(#intro-desktop-mask)" class="shape--fill"/>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-text" class="text--transparent"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-novo" class="text--transparent"></use>
+            </svg> 
+        </div>
+    </div>
+    <div class="intro-mobile"></div>
 </div>
 
 <div class="container" style="text-align:left">
     <div class="spacing-25"></div>
-    <h2>CRE8.CAPITAL</h2>
-    <p>A network consisting of thousands of companies and individuals spanning the globe.</p> 
-    <p>Intelligence that learns and works with you to create value and amass wealth.</p>
-    <p>A network of analysts spanning the globe. A strong team.</p>
+    <h3>Clout</h3>
+    <p style="font-style:italic;color:gray">A network consisting of thousands of companies and individuals spanning the globe.</p> 
+    <p style="font-style:italic;color:gray">Intelligence that learns and works with you to create value and amass wealth.</p>
+    <p style="font-style:italic;color:gray">A network of analysts spanning the globe. A strong team.</p>
     <div class="spacing-25"></div>
     <img src="images/3.jpg" style="max-width:100%">
     <img src="images/4.jpg" style="max-width:100%">
@@ -54,24 +34,16 @@
     <div class="spacing-50"></div>
 </div>
 
-<!--<div style="height:20vh;overflow:hidden">
-    <img src="images/25.jpg" style="width:100%">
-</div>-->
-
 <div style="color:white;background-color:black">
     <div class="spacing-50"></div>
     <div class="container" style="text-align:left">
         <div class="row">
             <div class="col-sm-6">
-                <!--<h3><i class="fa fa-file-o"></i> Open Data</h3>
-                <p style="font-style:italic">Data, we use. Data we produce, together.</p>-->
-                <h3>Cutting Edge Analysis at Scale</h4>
-                <h3>Open Intelligence</h3>
-                                <h3>Collaboration and Contribution</h3>
-
+                <h3>Analysis at Scale</h3>
+                <h5>Open Intelligence & Market Information</h5>
             </div>
             <div class="col-sm-6" style="overflow:hidden; text-align:right">
-                <img style="height:200px"src="images/2.gif">
+                <img style="height:100px"src="images/2.gif">
             </div>
         </div>
     </div>
@@ -80,69 +52,67 @@
 
 <div class="container" style="text-align:left">
 
-    <!--<img src="images/24.jpg" style="max-width:100%">-->
-    <!--<img src="images/25.jpg" style="max-width:100%">
-    <img src="images/26.jpg" style="max-width:100%">
-    <img src="images/13.jpg" style="max-width:100%">
-    <img src="images/30.jpg" style="max-width:100%">
-    <img src="images/34.jpg" style="width:100%">-->
-
-
     <div class="spacing-50"></div>
 
     <div class="row">
+
         <div class="col-sm-6">
-            <h3>Open Intelligence</h3>
-            <h5>Community Analysts</h5>
-            <img style="max-height:300px" src="images/heatmap.png">
+            <h3>Collaboration and Contribution</h3>
+            <p style="font-style:italic;color:gray">The Ethos of CRE8 reflects collaboration. www.CRE8.xyz</p>
+            <div class="spacing-5"></div>
+
+            <h4>Community Analysts</h4>
+            <p style="font-style:italic;color:gray">We all thrive when we share intelligence. Earn Tokens for Contribution.</p>
+
+
         </div>
 
         <div class="col-sm-6">
-            <highchart config="bidAskChart"></highchart>
         </div>
+
     </div>
     
     <div class="spacing-50"></div>
 
     <div class="row">
+
         <div class="col-sm-6">
-            <h3>Transparent Finance </h3>
-            <p style="font-style:italic">We Create Valuable Intelligence</p>
+            <h3>Transparent Finance</h3>
+            <p style="font-style:italic;color:gray">We Create Valuable Intelligence Together. A shared ledger of communical financaial assets.</p>
+            <div class="spacing-5"></div>
+
+            <h4>Mapping the Market</h4>
+            <p style="font-style:italic;color:gray">Multidimensional Market Traversal facilitated through Peer-to-Peer Machine Learning</p>
+            <div class="spacing-5"></div>
+
+            <h4>Machine Learning</h4>
+            <p style="font-style:italic;color:gray">Shared information creates intelligence</p>
+
         </div>
 
         <div class="col-sm-6">
-            <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
+
     </div>
 
     <div class="spacing-50"></div>
 
     <div class="row">
-        <!--<div class="col-sm-6">
-            <h3>Mapping the Market</h3>
-            <highchart config="bidAskChart"></highchart>
-        </div>-->
 
-        <div class="col-sm-12">
-            <highchart config="heatMapChart"></highchart>
-        </div>
-    </div>
-
-    <div class="row">
         <div class="col-sm-6">
-            <h3>Performance | Analysis </h3>
-            <p style="font-style:italic">How are we doing?</p>
+            <h3>Investment Performance</h3>
+            <p style="font-style:italic;color:gray">With {memberCount} Members, {trandeCount} trades, and over {capitalAppreciation}% Capital Appreciation. We are Successful</p>
         </div>
 
         <div class="col-sm-6">
-            <img style="max-height:300px;float:right" src="images/1.gif">
         </div>
+
     </div>
 
     <div class="spacing-50"></div>
     <highchart config="chartConfig"></highchart>
 
-
+    <a href="/markets" class="btn btn-default log-btn">Explore</a>
 
 </div>
 <div class="spacing-50"></div>
