--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="investing" ng-controller="AppCtrl">
     <head>
-        <title>collaborative.capital</title>
+        <title>CRE8.CAPITAL</title>
         <base href="/">
 
         <!--META TAGS-->
@@ -91,7 +91,6 @@
         <script src="/src/app/app.js"></script>
         <script src="/src/app/footer/index.js"></script>
         <script src="/src/app/home/index.js"></script>
-        <script src="/src/app/intro/index.js"></script>
         <script src="/src/app/login/index.js"></script>
         <script src="/src/app/market/index.js"></script>
         <script src="/src/app/marketPair/index.js"></script>
