--- a/.tmp/public/src/app/home/index.tpl.html
+++ b/.tmp/public/src/app/home/index.tpl.html
@@ -112,7 +112,29 @@
 
 <div ng-show="!currentUser">
 
-	<div ng-include="'intro/index.tpl.html'"></div>
+	<div class="intro" style="">
+	    <div class="intro-container">
+	        <svg class="svg-defs" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
+	            <symbol id="intro-desktop-text">
+	                <text style="font-size:108px;" text-anchor="middle" x="960" y="488" dy=".35em" class="medium-text">CRE8.CAPITAL</text> 
+	                <text style="font-size:28px;" text-anchor="middle" x="960" y="570" dy=".35em" class="medium-text">MULTIDIMENSIONAL CAPITAL PARTNERS</text> 
+	            </symbol>  
+	            <div class="intro-shade"></div>  
+	        </svg> 
+	        <div class="box-with-text">
+	            <div class="text-fill">
+	                <video itemscope itemtype="VideoObject" class="video" src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" preload="auto"autoplay="autoplay" loop="loop" muted="muted"></video>
+	            </div>
+	            <svg class="svg-inverted-mask" viewBox="0 0 1920 1080" viewPort="0 0 1920 1080" preserveAspectRatio="xMidYMid slice" xmlns="http://www.w3.org/2000/svg">
+	                <rect width="100%" height="100%" mask="url(#intro-desktop-mask)" class="shape--fill"/>
+	                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-text" class="text--transparent"></use>
+	                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#intro-desktop-novo" class="text--transparent"></use>
+	            </svg> 
+	        </div>
+	    </div>
+	    <div class="intro-mobile"></div>
+	</div>
+	
 	<div class="container" id="about">
 
 		<div class="spacing-100"></div>
@@ -215,8 +237,8 @@
 	<div style="text-align:left;" class="container">
 		<div class="spacing-50"></div>
 
-		<h2>Order Book</h2>
-		<h4>Transparent Investments</h4>
+		<h2>Transparent Orders</h2>
+		<h4>Accountability in Investment</h4>
 		<div class="spacing-10"></div>
 		<table class="table table-inverse table-hover">
 		    <thead>
