--- a/assets/src/app/nav/index.tpl.html
+++ b/assets/src/app/nav/index.tpl.html
@@ -12,9 +12,9 @@
         position: relative;
         float: right;
         padding: 9px 10px;
-        margin-top: 8px;
+        margin-top: 5px;
         margin-right: 15px;
-        margin-bottom: 8px;
+        //margin-bottom: 8px;
         background-color: transparent;
         background-image: none;
         border: 1px solid transparent;
