--- a/.tmp/public/styles/css/intro.css
+++ b/.tmp/public/styles/css/intro.css
@@ -1,312 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Titillium+Web:400,300,600,700);
 
-.intro {
-    position:relative;
-    top:0;
-    overflow: hidden;
-}
-
-.intro-container {
-    cursor:default;
-    min-height:100vh;
-    min-width:100vw;
-    height:100%;
-    width:100%;
-    z-index:1
-}
-
-.intro-mobile {
-    visibility:hidden;
-    position:absolute;
-    top:0;
-    left:0;
-    min-width:100%;
-    min-height:100%;
-    z-index:-4;
-    overflow:hidden;
-    background-repeat:no-repeat;
-    background:url(https://s3.amazonaws.com/novollc/images/home/mobile.png);
-    -webkit-background-size:cover;
-    -moz-background-size:cover;
-    -o-background-size:cover;
-    background-size:cover
-}
-
-svg {
-    max-width:100%;
-    max-height:100%;
-    min-width:100%;
-    min-height:100%
-}
-
-.continue-wrap {
-    position:absolute;
-    top:75%;
-    width:100%;
-    margin:0 auto
-}
-
-.svg-wrapper {
-    height:60px;
-    margin:0 auto;
-    width:320px;
-    cursor: pointer;
-}
-
-.text {
-    color:#fff;
-    font-family:'Play',sans-serif;
-    font-size:22px;
-    letter-spacing:8px;
-    line-height:32px;
-    position:relative;
-    top:-48px
-}
-
-#novo-svg {
-    fill:#fff;
-}
-
-.shape {
-    fill:transparent;
-    stroke-dasharray:180 540;
-    stroke-dashoffset:-454;
-    stroke-width:6px;
-    stroke:#fff
-}
-
-@keyframes draw {
-    0% {
-        stroke-dasharray:180 540;
-        stroke-dashoffset:-454;
-        stroke-width:6px;
-        stroke:#14B795
-    }
-
-    100% {
-        stroke-dasharray:760;
-        stroke-dashoffset:0;
-        stroke-width:2px;
-        stroke:#14B795
-    }
-}
-
-.svg-wrapper:hover .shape {
-    -webkit-animation:.5s draw linear forwards;
-    animation:.5s draw linear forwards
-}
-
-.svg-wrapper:hover .text {
-    color: #fff;
-}
-
-.box-with-text {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    margin:0 auto
-}
-
-.svg-inverted-mask {
-    margin:0 auto;
-    overflow:auto!important;
-    z-index:2
-}
-
-.text-fill {
-    z-index:-5;
-    margin:auto;
-    overflow:hidden
-}
-
-.video {
-    position:absolute;
-    top:0;
-    left:0;
-    bottom:0;
-    min-width:100%;
-    min-height:100%;
-    overflow:hidden;
-    z-index:-5
-}
-
-.shape--fill {
-    fill:rgba(0,0,0,0.25);
-}
-
-.text--transparent {
-    fill:rgba(255,255,255,0.75);
-    font-family: 'Titillium Web', sans-serif;
-    font-weight: bold;
-    letter-spacing: 1px;
-}
-
-.intro-shade {
-    background: rgba(0,0,0,0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    z-index: -1;
-}
-
-.svg-defs {
-    width:0;
-    height:0;
-}
-
-/* media queries */
-@media only screen and (max-width: 1024px) {
-    video {
-        display:none
-    }
-
-    .intro-mobile {
-        visibility:visible;
-        height:100%
-    }
-
-    .port-mobile {
-        visibility:visible
-    }
-
-    .port-box a #fill-hover {
-        fill:rgba(255,255,255,0.1);
-        transition:fill .2s
-    }
-
-    .contact-mobile {
-        visibility:visible;
-        height:100%
-    }
-}
-
-@media only screen and (max-width: 920px) {
-    .intro-container {
-        zoom: 0.8;
-    }
-    .continue-wrap {
-        display: none;
-    }
-}
-@media only screen and (max-width: 850px) {
-    .intro-container {
-        zoom: 0.7;
-    }
-}
-@media only screen and (max-width: 740px) {
-    .intro-container {
-        zoom: 0.6;
-    }
-}
-@media only screen and (max-width: 640px) {
-    .intro-container {
-        zoom: 0.55;
-    }
-}
-@media only screen and (max-width: 600px) {
-    .intro-container {
-        zoom: 0.5;
-    }
-}
-@media only screen and (max-width: 555px) {
-    .intro-container {
-        zoom: 0.45;
-    }
-}
-@media only screen and (max-width: 510px) {
-    .intro-container {
-        zoom: 0.4;
-    }
-}
-@media only screen and (max-width: 460px) {
-    .intro-container {
-        zoom: 0.35;
-    }
-}
-@media only screen and (max-width: 410px) {
-    .intro-container {
-        zoom: 0.325;
-    }
-}
-@media only screen and (max-width: 788px) {
-    .desktop {
-        visibility:hidden
-    }
-
-    .mobile {
-        visibility:visible
-    }
-}
-@media only screen and (max-width: 500px) {
-    .shape--fill {
-        fill: rgba(0,0,0,0.8);
-    }
-}
-
-.imageContainer {
-    background:rgba(26,26,36, 0.84);
-    overflow:hidden;
-    min-height: 500px;
-    font-family: 'Jura', sans-serif;
-    margin:0;padding:0;border:0 none;position: relative;
-}
-.imageContainerDiv {
-    width:100%;
-    height: 35em;
-    display: flex;
-    flex-direction: column;
-}
-.imageContainerDiv h1 {
-    color: rgba(255,255,255,0.9);
-    font-size: 50px;
-    font-weight: 400;
-    margin-top:auto;
-    margin-bottom:auto;
-}
-.imageContainerSmall {
-    background:rgba(36,36,46, 0.84);
-    overflow:hidden;
-    min-height: 200px;
-    font-family: 'Jura', sans-serif;
-    margin:0;padding:0;border:0 none;position: relative;
-}
-.imageContainerSmallDiv {
-    width:100%;
-    height: 200px;
-    display: flex;
-    flex-direction: column;
-}
-.imageContainerSmallDiv h1 {
-    color: rgba(255,255,255,0.9);
-    font-size: 50px;
-    font-weight: 400;
-    margin-top:auto;
-    margin-bottom:auto;
-}
-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    overflow: hidden;
-    z-index: -5;
-}
-
-
-
-
-
-
-
-
-
 .block{
   position: relatve;
   width: 200px;
@@ -388,196 +81,149 @@ video {
   100% {transform: translateX(50px) translateY(50px) rotateY(0deg) rotateX(90deg);}
 }
 
-
-
-
-
-
-
-/* Bob */
-@-webkit-keyframes hvr-bob {
-  0% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-
-  50% {
-    -webkit-transform: translateY(-4px);
-    transform: translateY(-4px);
-  }
-
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
+svg {
+  max-width:100%;
+  max-height:100%;
+  min-width:100%;
+  min-height:100%
 }
 
-@keyframes hvr-bob {
-  0% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-
-  50% {
-    -webkit-transform: translateY(-4px);
-    transform: translateY(-4px);
-  }
-
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-}
-
-@-webkit-keyframes hvr-bob-float {
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-}
-
-@keyframes hvr-bob-float {
-  100% {
-    -webkit-transform: translateY(-8px);
-    transform: translateY(-8px);
-  }
-}
-
-.hvr-bob {
-  cursor: pointer;
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .3s, 1.5s;
-  animation-duration: .3s, 1.5s;
-  -webkit-animation-delay: 0s, .3s;
-  animation-delay: 0s, .3s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
+.box-with-text {
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  margin:0 auto
 }
 
 .intro {
-    position: relative;
-    top: 0;
-}
-.intro-container {
-    cursor: default;
-    height: 100vh;
-    min-height: 100vh;
-    z-index: 1;
-}
-.intro-mask {
-    z-index: 2;
-}
-.intro-img {
-  visibility: hidden;
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  min-width: 100%;
-  min-height: 28%;
-  width: auto;
-  height: auto !important;
-  z-index: -4;
+  position:relative;
+  top:0;
   overflow: hidden;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
-.large-text {
-    font-family: 'Jura', sans-serif;
-    font-weight: 400;
-    font-size: 15em;
-    letter-spacing:-0.09em;
-}
-.large-medium-text {
-    font-family: 'Jura', sans-serif;
-    font-weight: 400;
-    font-size: 12em;
-    letter-spacing:-0.09em;
-}
-.medium-text {
-    font-family: 'Barlow', sans-serif;
-    font-weight: 400;
-    font-size: 4em;
-    letter-spacing: .05em;
-}
-.small-text {
-    font-family: 'Jura', sans-serif;
-    font-weight: 400;
-    font-size: 2.5em;
-    letter-spacing:-0.09em;
-}
-.learn-more {
-  font-size: 25px !important;
-}
-.tri-after {
-  opacity: 0;
-  transition: opacity .2s;
-}
-.tri-after:hover {
-  opacity: 1.0;
-}
-.intro-container svg {
-    width: 100%;
-    height: 100%;
-}
-.intro-container svg text {
-    text-anchor: middle;
-}
-.intro-container svg mask rect {
-    fill: rgba(255, 255, 255, 1.0);
-    opacity: 0.75;
-}
-.intro-container svg > .intro-rect {
-    //fill: #2ab996;
-    fill: #ebeeff;
-    opacity: 0.75;
-    -webkit-mask: url(#intro-mask);
-    mask: url(#intro-mask);
 }
 
-video {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  min-width: 100%;
-  min-height: 28%;
-  width: auto;
-  height: auto;
-  overflow: hidden;
+.intro-container {
+  cursor:default;
+  min-height:100vh;
+  min-width:100vw;
+  height:100%;
+  width:100%;
+  z-index:1
+}
+
+.intro-mobile {
+  visibility:hidden;
+  position:absolute;
+  top:0;
+  left:0;
+  min-width:100%;
+  min-height:100%;
+  z-index:-4;
+  overflow:hidden;
+  background-repeat:no-repeat;
+  background:url(https://s3.amazonaws.com/novollc/images/home/mobile.png);
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover
+}
+
+.intro-shade {
+  background: rgba(0,0,0,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    z-index: -1;
+}
+
+.shape--fill {fill:rgba(0,0,0,0.25);}
+
+.svg-defs {
+  width:0;
+  height:0;
+}
+
+.svg-inverted-mask {
+  margin:0 auto;
+  overflow:auto!important;
+  z-index:2
+}
+
+.text-fill {
+  z-index:-5;
+  margin:auto;
+  overflow:hidden
+}
+
+.text--transparent {
+  fill:rgba(255,255,255,0.75);
+  font-family: 'Barlow', sans-serif;
+  letter-spacing: 1px;
+}
+
+.video {
+  position:absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  min-width:100%;
+  min-height:100%;
+  overflow:hidden;
+  z-index:-5
 }
 
 /* media queries */
-@media only screen and (max-width: 1200px) {
-  svg {
-    font-size:0.8em !important;
-  }
-}
 @media only screen and (max-width: 1024px) {
-  svg {
-    font-size:0.8em !important;
+  video {display:none}
+  .intro-mobile {
+    visibility:visible;
+    height:100%
   }
 }
-@media only screen and (max-width: 840px) {
-  svg {
-    font-size:0.8em !important;
-  }
+
+@media only screen and (max-width: 920px) {
+  //.intro-container {zoom: 0.8}
+}
+@media only screen and (max-width: 850px) {
+  //.intro-container {zoom: 0.7}
+  //body{zoom: 1}
+}
+@media only screen and (max-width: 740px) {
+  //.intro-container {zoom: 0.6}
+  //body{zoom: 1}
+}
+@media only screen and (max-width: 640px) {
+  //.intro-container {zoom: 0.55}
+  //body{zoom: 1}
+}
+@media only screen and (max-width: 600px) {
+  //.intro-container {zoom: 0.5}
+  //body{zoom: 0.97}
+}
+@media only screen and (max-width: 555px) {
+  //.intro-container {zoom: 0.45}
+  //body{zoom: 0.94}
+}
+@media only screen and (max-width: 510px) {
+  //.intro-container {zoom: 0.4}
+  //body{zoom: 0.91}
+}
+@media only screen and (max-width: 460px) {
+  //.intro-container {zoom: 0.35}
+  //body{zoom: 0.88}
+  .main-container{zoom:0.88;}
+}
+@media only screen and (max-width: 410px) {
+  //.intro-container {zoom: 0.325}
+  //.intro-container {zoom: 0.55}
+  .main-container{zoom:0.75;}
+}
+
+@media only screen and (max-width: 788px) {
+  .desktop {visibility:hidden}
+  .mobile {visibility:visible}
 }
