--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -21,16 +21,14 @@
     <div class="intro-mobile"></div>
 </div>
 
-<div class="container" style="text-align:left">
-    <div class="spacing-25"></div>
-    <h3>Clout</h3>
-    <p style="font-style:italic;color:gray">A network consisting of thousands of companies and individuals spanning the globe.</p> 
-    <p style="font-style:italic;color:gray">Intelligence that learns and works with you to create value and amass wealth.</p>
-    <p style="font-style:italic;color:gray">A network of analysts spanning the globe. A strong team.</p>
-    <div class="spacing-25"></div>
-    <img src="images/3.jpg" style="max-width:100%">
-    <img src="images/4.jpg" style="max-width:100%">
-    <!--<img src="images/5.jpg" style="max-width:100%">-->
+<div class="container">
+    <div class="spacing-50"></div>
+    <div class="row">
+        <h3>The Network Effects Of Coming Together</h3>
+        <p style="font-style:italic;color:gray">Consisting of thousands of companies and individuals spanning the globe.</p> 
+        <p style="font-style:italic;color:gray">Intelligence that learns and works with you to create value and amass wealth.</p>
+        <p style="font-style:italic;color:gray">A network of analysts spanning the globe. A strong team.</p>
+    </div>
     <div class="spacing-50"></div>
 </div>
 
