--- a/assets/src/app/about/index.tpl.html
+++ b/assets/src/app/about/index.tpl.html
@@ -26,8 +26,8 @@
     <div class="row">
         <h3>The Network Effects Of Coming Together</h3>
         <p style="font-style:italic;color:gray">Consisting of thousands of companies and individuals spanning the globe.</p> 
-        <p style="font-style:italic;color:gray">Intelligence that learns and works with you to create value and amass wealth.</p>
-        <p style="font-style:italic;color:gray">A network of analysts spanning the globe. A strong team.</p>
+        <p style="font-style:italic;color:gray">Our Shared Intelligence learns and works to create value and amass wealth.</p>
+        <p style="font-style:italic;color:gray">This network of analysts spans the globe. A strong team.</p>
     </div>
     <div class="spacing-50"></div>
 </div>
@@ -56,7 +56,7 @@
 
         <div class="col-sm-6">
             <h3>Collaboration and Contribution</h3>
-            <p style="font-style:italic;color:gray">The Ethos of CRE8 reflects collaboration. www.CRE8.xyz</p>
+            <p style="font-style:italic;color:gray">The Ethos of CRE8 reflects collaboration. <a href="https://www.cre8.xyz">CRE8.XYZ</a></p>
             <div class="spacing-5"></div>
 
             <h4>Community Analysts</h4>
@@ -80,11 +80,11 @@
             <div class="spacing-5"></div>
 
             <h4>Mapping the Market</h4>
-            <p style="font-style:italic;color:gray">Multidimensional Market Traversal facilitated through Peer-to-Peer Machine Learning</p>
+            <p style="font-style:italic;color:gray">Multidimensional Market Traversal facilitated through Peer-to-Peer Machine Learning.</p>
             <div class="spacing-5"></div>
 
             <h4>Machine Learning</h4>
-            <p style="font-style:italic;color:gray">Shared information creates intelligence</p>
+            <p style="font-style:italic;color:gray">Shared information creates intelligence.</p>
 
         </div>
 
@@ -99,7 +99,7 @@
 
         <div class="col-sm-6">
             <h3>Investment Performance</h3>
-            <p style="font-style:italic;color:gray">With {memberCount} Members, {trandeCount} trades, and over {capitalAppreciation}% Capital Appreciation. We are Successful</p>
+            <p style="font-style:italic;color:gray">With {memberCount} Members, {trandeCount} trades, and over {capitalAppreciation}% Capital Appreciation. We are Successful.</p>
         </div>
 
         <div class="col-sm-6">
