--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -134,10 +134,22 @@
 	    </div>
 	    <div class="intro-mobile"></div>
 	</div>
+
+	<div class="container">
+	    <div class="spacing-50"></div>
+	    <div class="row">
+	        <h3>The Network Effects Of Coming Together</h3>
+	        <p style="font-style:italic;color:gray">Consisting of thousands of companies and individuals spanning the globe.</p> 
+	        <p style="font-style:italic;color:gray">Our Shared Intelligence learns and works to create value and amass wealth.</p>
+	        <p style="font-style:italic;color:gray">This network of analysts spans the globe. A strong team.</p>
+	    </div>
+	    <div class="spacing-50"></div>
+	</div>
 	
 	<div class="container" id="about">
 
 		<div class="spacing-100"></div>
+
 		<div class="row">
 			<div class="col-sm-12">
 			    <div style="text-align:left;" id="header-text-area">
@@ -146,6 +158,7 @@
 			    </div>
 			</div>
 		</div>
+
 		<div class="spacing-100"></div>
 
 	</div>
@@ -203,13 +216,13 @@
 			<div class="col-sm-8" style="">
 
 				<h3>Collaboration and Contribution</h3>
-				<p style="color:gray;font-style:italic">We continually learn from intelligence produced from your computational contrubition and analytic insight.</p>
+				<p style="color:gray;font-style:italic">We continually learn from intelligence produced from your computational contribution and analytic insight.</p>
 				<p style="color:gray;font-style:italic">Deep Learning Techniques create actionable intelligence.</p>
 				<div class="spacing-10"></div>
 
-				<h3>Decrentralized Analysis at Scale</h3>
+				<h3>Decentralized Analysis at Scale</h3>
 				<p style="color:gray;font-style:italic">Peer to Peer Distributed Networks performing computation together.</p>
-				<p style="color:gray;font-style:italic">Creating Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns</p>
+				<p style="color:gray;font-style:italic">Creating Computational Intelligence Designed to Normalize Risk and Equalize Investment Returns.</p>
 
 				<div class="spacing-10"></div>
 				<a href="/about" class="btn btn-default log-btn">Learn More</a>
