--- a/assets/src/app/markets/index.tpl.html
+++ b/assets/src/app/markets/index.tpl.html
@@ -170,7 +170,7 @@
 
     <div class="spacing-15"></div>
  	
-	<div class="row">
+	<div ng-show="false" class="row">
 
         <h3>Neural Networks</h3>
         
